<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_add"
    tools:context="com.example.non_jid.tabapp.AddMapActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="                                          "
    android:id="@+id/textView3"
    android:textSize="30dp"
    android:layout_marginTop="50dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="10dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3">

        <ScrollView
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/scrollView"
                android:id="@+id/name">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:id="@+id/edtShop" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/name">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:id="@+id/edtAddress" />
            </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/promotion"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/address">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/promotion"
                        android:id="@+id/edtPromote" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tel"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/promotion">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tel"
                        android:id="@+id/edtPhone" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/pointMap"
                    android:id="@+id/txtPointMap"
                    android:textSize="25dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="#FF0000"
                    android:layout_below="@+id/tel" />

                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:map="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    tools:context="com.example.non_jid.tabapp.NewAddMap" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addmap"
                    android:id="@+id/bntAddMap"
                    android:background="@drawable/circlebutton"
                    android:textColor="#03A9F4"
                    android:layout_below="@+id/lng"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:onClick="clickUploadValueToServer" />



            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>
